import { shallowMount } from '@vue/test-utils'
import Component from "./Textarea.vue";

describe("Textarea.vue", () => {
  it("is a Vue instance", () => {
    const wrapper = shallowMount(Component);
    expect(wrapper.vm).toBeTruthy();
  });

  it("matches snapshot with no props assigned", () => {
    const props = {};
    const wrapper = shallowMount(Component, { props });
    expect(wrapper.html()).toMatchSnapshot();
  });

  it("matches snapshot with maxlength and count-characters prop assigned", () => {
    const props = {
      maxlength: 50,
      countCharacters: true
    };
    const wrapper = shallowMount(Component, { props });
    expect(wrapper.html()).toMatchSnapshot();
  });

  it("matches snapshot with rows prop assigned", () => {
    const props = {
      rows: 2,
    };
    const wrapper = shallowMount(Component, { props });
    expect(wrapper.html()).toMatchSnapshot();
  });

  it("matches snapshot with disabled prop assigned", () => {
    const props = {
      disabled: true,
    };
    const wrapper = shallowMount(Component, { props });
    expect(wrapper.html()).toMatchSnapshot();
  });

  it("matches snapshot with readonly prop assigned", () => {
    const props = {
      readonly: true,
    };
    const wrapper = shallowMount(Component, { props });
    expect(wrapper.html()).toMatchSnapshot();
  });

  it("matches snapshot with placeholder prop assigned", () => {
    const props = {
      placeholder: "This is a placeholder",
    };
    const wrapper = shallowMount(Component, { props });
    expect(wrapper.html()).toMatchSnapshot();
  });

  it("matches snapshot with value prop assigned", () => {
    const props = {
      value: "This is the text content",
    };
    const wrapper = shallowMount(Component, { props });
    expect(wrapper.html()).toMatchSnapshot();
  });
});
